# simple-inbox-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  botspot_101.md  docker-compose.yaml  example.env  pyproject.toml  run.py
.github/workflows/: main.yml
app/: _app.py  bot.py  router.py
app/routers/: inbox.py  settings.py
dev/: dev.ipynb  todo.md  todo_other.md
tests/: test_imports.py
